--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
       <div class="search-input">
         <input id="text" list="result-list" placeholder="Type to search.." />
          
-          <button class="icon" id="btn"><i class="fas fa-search"></i>c </button>
+          <button class="icon" id="btn"><i class="fas fa-search"></i>s </button>
           <!-- <ul id="result-list" onclick="select1()"></ul> -->
           <datalist id="result-list">
           </datalist>
